--- a/wp-content/themes/blocks-theme/style.css
+++ b/wp-content/themes/blocks-theme/style.css
@@ -967,3 +967,11 @@ textarea {
 	margin-right: auto;
 	margin-bottom: 1.5em;
 }
+
+/* Custom
+--------------------------------------------- */
+.site {
+	max-width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+}
