--- a/wp-content/themes/blocks-theme/style-editor.css
+++ b/wp-content/themes/blocks-theme/style-editor.css
@@ -5,3 +5,11 @@ body {
 .wp-block {
   max-width: 800px;
 }
+
+.wp-block[data-align=full] {
+  max-width: none;
+}
+
+.wp-block[data-align=wide] {
+  max-width: 1000px;
+}
