--- a/wp-content/themes/blocks-theme/style.css
+++ b/wp-content/themes/blocks-theme/style.css
@@ -975,3 +975,27 @@ textarea {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.alignwide {
+	margin-left: -100px;
+	margin-right: -100px;
+}
+
+.alignfull {
+	margin-left: calc( -1 * (100vw - 800px) / 2 );
+	margin-right: calc( -1 * (100vw - 800px) / 2 );
+}
+
+@media screen and (max-width: 800px) {
+	.alignfull {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	.alignwide {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
