--- a/wp-content/themes/blocks-theme/style-editor.css
+++ b/wp-content/themes/blocks-theme/style-editor.css
@@ -13,3 +13,27 @@ body {
 .wp-block[data-align=wide] {
   max-width: 1000px;
 }
+
+.has-strong-magenta-background-color {
+  background-color: #a156b4;
+}
+
+.has-strong-magenta-color {
+  color: #a156b4;
+}
+
+.has-very-light-gray-background-color {
+  background-color: #eee;
+}
+
+.has-very-light-gray-color {
+  color: #eee;
+}
+
+.has-red-to-blue-gradient-background {
+  background: linear-gradient(135deg, #e4064d 0%, #2c59ee 100%);
+}
+
+.has-green-to-yellow-gradient-background {
+  background: linear-gradient(135deg, #3ce406 0%, #d63029 100%);
+}
