--- a/wp-content/themes/blocks-theme/style.css
+++ b/wp-content/themes/blocks-theme/style.css
@@ -976,6 +976,30 @@ textarea {
 	margin-right: auto;
 }
 
+.has-strong-magenta-background-color {
+	background-color: #a156b4;
+}
+
+.has-strong-magenta-color {
+	color: #a156b4;
+}
+
+.has-very-light-gray-background-color {
+	background-color: #eee;
+}
+
+.has-very-light-gray-color {
+	color: #eee;
+}
+
+.has-red-to-blue-gradient-background {
+	background: linear-gradient(135deg, #e4064d 0%, #2c59ee 100%);
+}
+
+.has-green-to-yellow-gradient-background {
+	background: linear-gradient(135deg, #3ce406 0%, #d63029 100%);
+}
+
 .alignwide {
 	margin-left: -100px;
 	margin-right: -100px;
@@ -986,15 +1010,15 @@ textarea {
 	margin-right: calc( -1 * (100vw - 800px) / 2 );
 }
 
-@media screen and (max-width: 800px) {
-	.alignfull {
+@media screen and (max-width: 1000px) {
+	.alignwide {
 		margin-left: 0;
 		margin-right: 0;
 	}
 }
 
-@media screen and (max-width: 1000px) {
-	.alignwide {
+@media screen and (max-width: 800px) {
+	.alignfull {
 		margin-left: 0;
 		margin-right: 0;
 	}
