feat: (sec 4, chp 33) adding an option to change the block's padding

--- a/wp-content/plugins/text-box/src/editor.scss
+++ b/wp-content/plugins/text-box/src/editor.scss
@@ -4,6 +4,10 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-boilerplate {
-	border: 1px dotted #f03;
+.wp-block-gutenbergblocks-text-box {
+
+	&.text-box-title {
+		margin: 0;
+	}
+
 }
