feat: (sec 5, chp 42) editing the boilerplate's metadata

--- a/wp-content/themes/blocks-theme/style.css
+++ b/wp-content/themes/blocks-theme/style.css
@@ -970,6 +970,10 @@ textarea {
 
 /* Custom
 --------------------------------------------- */
+html {
+	font-family: sans-serif !important;
+}
+
 .site {
 	max-width: 800px;
 	margin-left: auto;
